# aws-multi-account-inventory

./: .bandit  .env.example  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  CODE_AUDIT_REPORT.md  INTEGRATION_SUMMARY.md  LICENSE  MERGE_ANALYSIS.md  MIGRATION_SUMMARY.md  Makefile  README.md  audit_local.sh  coverage.xml  dead_code_report.json  deploy.sh  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  code-quality.yml  dependency-check.yml  documentation-check.yml  infrastructure-audit.yml  performance-cost-check.yml  security-scan.yml
audit/: README.md
audit/configs/: bandit.yaml  cfn-nag-profile.yml  ruff.toml  tfsec-config.yml  vale.ini
audit/reports/: bandit-report.json
audit/scripts/: cost-analyzer.py  dead-code-detector.py  dynamodb-optimizer.py  generate-cost-summary.py  lambda-power-tune.py
backups/20250623_130208/src_backup/collector/: enhanced_main.py  main.py
backups/20250623_130208/src_backup/lambda/: enhanced_handler.py  handler.py
backups/20250623_130208/src_backup/query/: enhanced_inventory_query.py  inventory_query.py
backups/20250623_130208/terraform_backup/: main.tf  main_consolidated.tf  outputs.tf  terraform.tfvars.example  variables_consolidated.tf
backups/20250623_130208/terraform_backup/modules/inventory-role/: main.tf
backups/20250623_130208/terraform_backup/target-account-role/: main.tf
cloudformation/: complete-infrastructure.yaml  dynamodb-table.yaml  iam-role.yaml  lambda-collector.yaml  monitoring-stack.yaml
config/: accounts.json.example  enhanced_accounts.json
docs/: DEPLOYMENT_CHECKLIST.md  ENHANCED_FEATURES.md
infrastructure/: cloudformation.yaml  member-account-role.yaml
scripts/: build-lambda-enhanced.sh  build-lambda.sh  deploy-all.sh  deploy-terraform.sh  deploy.sh  migrate-to-consolidated.sh  validate-integration.sh
src/: handler.py
src/collector/: enhanced_main.py  main.py
src/lambda/: enhanced_handler.py  handler.py
src/query/: enhanced_inventory_query.py  inventory_query.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/inventory-role/: outputs.tf  variables.tf
terraform/target-account-role/: main.tf
tests/: test_lambda_locally.py  test_lambda_locally.py.txt
tests/unit/: test_basic.py  test_enhanced_collector.py
